--- a/style.css
+++ b/style.css
@@ -9,19 +9,21 @@
 #title {
     background: yellow;
     /*add CSS here*/
-    
+    border:20px;
 }
 
 #subtitle {
     background: black;
     color: white;
     /*add CSS here*/
+    border:20px;
     
 }
 
 .topic {
     background: lightgray;
     /*add CSS here*/
-    
+    margin:50px;
+    display:inline;
 }
 
